parser/src/parser/expressions/snapshots/test__parser::expressions::call_expr::test::parse_call_trailing_comma.snap
---
created: "2020-02-03T16:29:14.740093Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/call_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK@[10; 20)
      L_CURLY@[10; 11) "{"
      EXPR_STMT@[11; 18)
        CALL_EXPR@[11; 18)
          IDENT_EXPR@[11; 12)
            NAME@[11; 12)
              IDENT@[11; 12) "a"
          ARG_LIST@[12; 18)
            L_PAREN@[12; 13) "("
            IDENT_EXPR@[13; 14)
              NAME@[13; 14)
                IDENT@[13; 14) "a"
            COMMA@[14; 15) ","
            IDENT_EXPR@[15; 16)
              NAME@[15; 16)
                IDENT@[15; 16) "b"
            COMMA@[16; 17) ","
            R_PAREN@[17; 18) ")"
      SEMI@[18; 19) ";"
      R_CURLY@[19; 20) "}"

