parser/src/parser/expressions/snapshots/test__parser::expressions::closure_expr::test::parse_empty_closure_expr.snap
---
created: "2020-02-03T16:25:09.861812Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/closure_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 40)
  FN_DEF@[0; 40)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK@[10; 40)
      L_CURLY@[10; 11) "{"
      WHITESPACE@[11; 12) "\n"
      WHITESPACE@[12; 13) " "
      WHITESPACE@[13; 14) " "
      WHITESPACE@[14; 15) " "
      WHITESPACE@[15; 16) " "
      WHITESPACE@[16; 17) " "
      WHITESPACE@[17; 18) " "
      WHITESPACE@[18; 19) " "
      WHITESPACE@[19; 20) " "
      LET_STMT@[20; 33)
        LET_KW@[20; 23) "let"
        WHITESPACE@[23; 24) " "
        BIND_PAT@[24; 26)
          NAME@[24; 25)
            IDENT@[24; 25) "a"
          WHITESPACE@[25; 26) " "
        EQ@[26; 27) "="
        WHITESPACE@[27; 28) " "
        CLOSURE_EXPR@[28; 33)
          PIPE@[28; 29) "|"
          PIPE@[29; 30) "|"
          BLOCK@[30; 33)
            WHITESPACE@[30; 31) " "
            L_CURLY@[31; 32) "{"
            R_CURLY@[32; 33) "}"
      SEMI@[33; 34) ";"
      WHITESPACE@[34; 35) "\n"
      WHITESPACE@[35; 36) " "
      WHITESPACE@[36; 37) " "
      WHITESPACE@[37; 38) " "
      WHITESPACE@[38; 39) " "
      R_CURLY@[39; 40) "}"

