parser/src/parser/expressions/snapshots/test__parser::expressions::field_expr::test::parse_field_access_method.snap
---
created: "2020-02-04T16:08:50.766138Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/field_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 17)
  FN_DEF@[0; 17)
    FN_KW@[0; 2) "fn"
    NAME@[2; 7)
      WHITESPACE@[2; 3) " "
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    BLOCK@[9; 17)
      L_CURLY@[9; 10) "{"
      EXPR_STMT@[10; 15)
        FIELD_EXPR@[10; 15)
          IDENT_EXPR@[10; 11)
            NAME@[10; 11)
              IDENT@[10; 11) "a"
          DOT@[11; 12) "."
          CALL_EXPR@[12; 15)
            IDENT_EXPR@[12; 13)
              NAME@[12; 13)
                IDENT@[12; 13) "b"
            ARG_LIST@[13; 15)
              L_PAREN@[13; 14) "("
              R_PAREN@[14; 15) ")"
      SEMI@[15; 16) ";"
      R_CURLY@[16; 17) "}"

